--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <p>This is a simple HTML page served via Docker.</p>
+    <p>This is a simple HTML page.</p>
 </body>
 </html>
