--- a/index.html
+++ b/index.html
@@ -64,14 +64,10 @@
                 console.error('Error loading Embedded Messaging:', err);
             }
         }
-
-        // Start the process
-        initEmbeddedMessagingWithJwt();
     </script>
-
     <script type="text/javascript" 
         src="https://waterfall-espresso-4996.scratch.my.site.com/ESWAsahiServicePortalM1711933975688/assets/js/bootstrap.min.js" 
-        onload="initEmbeddedMessaging()">
+        onload="initEmbeddedMessagingWithJwt()">
     </script>
 </body>
 </html>
