--- a/user2.html
+++ b/user2.html
@@ -102,7 +102,7 @@
 
     <script type="text/javascript" 
         src="https://waterfall-espresso-4996.scratch.my.site.com/ESWAsahiServicePortalM1711933975688/assets/js/bootstrap.min.js" 
-        onload="initEmbeddedMessagingWithJwt()">
+        onload="initEmbeddedMessaging()">
     </script>
 </body>
 </html>
