--- a/user2.html
+++ b/user2.html
@@ -13,44 +13,44 @@
     <button id="deleteButton">Delete Session</button>
 
     <script type="text/javascript">
-        // async function fetchJwt() {
-        //     try {
-        //         // Fetch the JWT from the local file
-        //         const response = await fetch('./user2.jwt');
-        //         if (!response.ok) {
-        //             throw new Error(`Failed to fetch JWT: ${response.statusText}`);
-        //         }
-        //         const token = await response.text(); // Read the JWT as plain text
-        //         return token.trim(); // Return the token, trimming whitespace
-        //     } catch (error) {
-        //         console.error('Error fetching JWT:', error);
-        //     }
-        // }
+        async function fetchJwt() {
+            try {
+                // Fetch the JWT from the local file
+                const response = await fetch('./user2.jwt');
+                if (!response.ok) {
+                    throw new Error(`Failed to fetch JWT: ${response.statusText}`);
+                }
+                const token = await response.text(); // Read the JWT as plain text
+                return token.trim(); // Return the token, trimming whitespace
+            } catch (error) {
+                console.error('Error fetching JWT:', error);
+            }
+        }
 
-        // async function initEmbeddedMessagingWithJwt() {
-        //     const jwtToken = await fetchJwt(); // Get JWT from local file
-        //     if (!jwtToken) {
-        //         console.error('Failed to retrieve JWT.');
-        //         return;
-        //     }
+        async function initEmbeddedMessagingWithJwt() {
+            const jwtToken = await fetchJwt(); // Get JWT from local file
+            if (!jwtToken) {
+                console.error('Failed to retrieve JWT.');
+                return;
+            }
 
-        //     // Initialize Embedded Messaging
-        //     window.addEventListener("onEmbeddedMessagingReady", () => {
-        //         console.log("Received the onEmbeddedMessagingReady event.");
+            // Initialize Embedded Messaging
+            window.addEventListener("onEmbeddedMessagingReady", () => {
+                console.log("Received the onEmbeddedMessagingReady event.");
 
-        //         try {
-        //             embeddedservice_bootstrap.userVerificationAPI.setIdentityToken({
-        //                 identityTokenType: "JWT",
-        //                 identityToken: jwtToken
-        //             });
-        //             console.log("Identity token sent to Salesforce.");
-        //         } catch (err) {
-        //             console.error("Error sending identity token:", err);
-        //         }
-        //     });
+                try {
+                    embeddedservice_bootstrap.userVerificationAPI.setIdentityToken({
+                        identityTokenType: "JWT",
+                        identityToken: jwtToken
+                    });
+                    console.log("Identity token sent to Salesforce.");
+                } catch (err) {
+                    console.error("Error sending identity token:", err);
+                }
+            });
 
-        //     initEmbeddedMessaging();
-        // }
+            initEmbeddedMessaging();
+        }
 
         function initEmbeddedMessaging() {
             try {
@@ -69,35 +69,35 @@
         }
 
         // Function to handle the DELETE request with the new URL
-        // function deleteSessionRequest() {
-        //     const init = {
-        //         method: 'DELETE',
-        //         headers: {
-        //             'Content-Type': 'application/json',
-        //             // Include any other headers required for authentication or authorization
-        //         },
-        //     };
+        function deleteSessionRequest() {
+            const init = {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json',
+                    // Include any other headers required for authentication or authorization
+                },
+            };
 
-        //     const url = 'https://waterfall-espresso-4996.scratch.my.salesforce-scrt.com/iamessage/api/v2/conversation/0dwF30000001ewqIAA/session?esDeveloperName=Asahi_Service_Portal_Messaging';
+            const url = 'https://waterfall-espresso-4996.scratch.my.salesforce-scrt.com/iamessage/api/v2/conversation/0dwF30000001ewqIAA/session?esDeveloperName=Asahi_Service_Portal_Messaging';
 
-        //     fetch(url, init)
-        //         .then((response) => {
-        //             return response.json(); // or .text() or .blob() ...
-        //         })
-        //         .then((text) => {
-        //             // text is the response body
-        //             console.log('Response:', text);
-        //         })
-        //         .catch((e) => {
-        //             // error in e.message
-        //             console.error('Error:', e.message);
-        //         });
-        // }
+            fetch(url, init)
+                .then((response) => {
+                    return response.json(); // or .text() or .blob() ...
+                })
+                .then((text) => {
+                    // text is the response body
+                    console.log('Response:', text);
+                })
+                .catch((e) => {
+                    // error in e.message
+                    console.error('Error:', e.message);
+                });
+        }
 
-        // // Attach event listener to the button to trigger deleteSessionRequest
-        // document.getElementById("deleteButton").addEventListener("click", function() {
-        //     deleteSessionRequest();
-        // });
+        // Attach event listener to the button to trigger deleteSessionRequest
+        document.getElementById("deleteButton").addEventListener("click", function() {
+            deleteSessionRequest();
+        });
     </script>
 
     <script type="text/javascript" 
