--- a/user2.html
+++ b/user2.html
@@ -15,11 +15,11 @@
       embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
       embeddedservice_bootstrap.init(
-        '00DHy000000d8HT',
+        '00DF3000000I3cX',
         'Asahi_Service_Portal_Messaging',
-        'https://strawberry-trailblazer-8339.scratch.my.site.com/ESWAsahiServicePortalM1711933975688',
+        'https://waterfall-espresso-4996.scratch.my.site.com/ESWAsahiServicePortalM1711933975688',
         {
-          scrt2URL: 'https://strawberry-trailblazer-8339.scratch.my.salesforce-scrt.com'
+          scrt2URL: 'https://waterfall-espresso-4996.scratch.my.salesforce-scrt.com'
         }
       );
     } catch (err) {
@@ -37,13 +37,13 @@
 
           //Set invisible prechat field
           embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({
-              "ContactId" : sContactId ,
-              "AccountId" : sAccountId 
+              "ContactId" : sEmailAddress ,
+              "AccountId" : sExternalId 
           });
       });
 
-
 </script>
-<script type='text/javascript' src='https://strawberry-trailblazer-8339.scratch.my.site.com/ESWAsahiServicePortalM1711933975688/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://waterfall-espresso-4996.scratch.my.site.com/ESWAsahiServicePortalM1711933975688/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+ 
 </body>
 </html>
