--- a/index.html
+++ b/index.html
@@ -19,57 +19,25 @@
   }
 </style>
 
-<script type='text/javascript' src='https://service.force.com/embeddedservice/5.0/esw.min.js'></script>
 <script type='text/javascript'>
-  var initESW = function(gslbBaseURL) {
-    embedded_svc.settings.displayHelpButton = true; //Or false
-    embedded_svc.settings.language = ''; //For example, enter 'en' or 'en-US'
+	function initEmbeddedMessaging() {
+		try {
+			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
-    //embedded_svc.settings.defaultMinimizedText = '...'; //(Defaults to Chat with an Expert)
-    //embedded_svc.settings.disabledMinimizedText = '...'; //(Defaults to Agent Offline)
-
-    //embedded_svc.settings.loadingText = ''; //(Defaults to Loading)
-    //embedded_svc.settings.storageDomain = 'yourdomain.com'; //(Sets the domain for your deployment so that visitors can navigate subdomains during a chat session)
-
-    // Settings for Chat
-    //embedded_svc.settings.directToButtonRouting = function(prechatFormData) {
-      // Dynamically changes the button ID based on what the visitor enters in the pre-chat form.
-      // Returns a valid button ID.
-    //};
-    //embedded_svc.settings.prepopulatedPrechatFields = {}; //Sets the auto-population of pre-chat form fields
-    //embedded_svc.settings.fallbackRouting = []; //An array of button IDs, user IDs, or userId_buttonId
-    //embedded_svc.settings.offlineSupportMinimizedText = '...'; //(Defaults to Contact Us)
-
-    embedded_svc.settings.enabledFeatures = ['LiveAgent'];
-    embedded_svc.settings.entryFeature = 'LiveAgent';
-
-    embedded_svc.init(
-      'https://mindful-narwhal-gqyk0w-dev-ed.trailblaze.my.salesforce.com',
-      'https://mindful-narwhal-gqyk0w-dev-ed.trailblaze.my.site.com/norbitestsitechat',
-      gslbBaseURL,
-      '00DdM00000EKfAG',
-      'Chat_Team',
-      {
-        baseLiveAgentContentURL: 'https://c.la11-core1.sfdc-y37hzm.salesforceliveagent.com/content',
-        deploymentId: '572dM000008hy4M',
-        buttonId: '573dM000002E5GP',
-        baseLiveAgentURL: 'https://d.la11-core1.sfdc-y37hzm.salesforceliveagent.com/chat',
-        eswLiveAgentDevName: 'Chat_Team',
-        isOfflineSupportEnabled: false
-      }
-    );
-  };
-
-  if (!window.embedded_svc) {
-    var s = document.createElement('script');
-    s.setAttribute('src', 'https://mindful-narwhal-gqyk0w-dev-ed.trailblaze.my.salesforce.com/embeddedservice/5.0/esw.min.js');
-    s.onload = function() {
-      initESW(null);
-    };
-    document.body.appendChild(s);
-  } else {
-    initESW('https://service.force.com');
-  }
+			embeddedservice_bootstrap.init(
+				'00DH40000002Ezp',
+				'Asahi_Service_Portal_Messaging',
+				'https://beans-orion-7292.scratch.my.site.com/ESWAsahiServicePortalM1711933975688',
+				{
+					scrt2URL: 'https://beans-orion-7292.scratch.my.salesforce-scrt.com'
+				}
+			);
+		} catch (err) {
+			console.error('Error loading Embedded Messaging: ', err);
+		}
+	};
 </script>
+<script type='text/javascript' src='https://beans-orion-7292.scratch.my.site.com/ESWAsahiServicePortalM1711933975688/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+
 </body>
 </html>
