--- a/index.html
+++ b/index.html
@@ -3,22 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-    <title>Salesforce Messaging with Local JWT</title>
+    <title>Salesforce Messaging</title>
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <p>This is a simple HTML page to test Salesforce Messaging for Web with a locally stored JWT.</p>
-
-<style type='text/css'>
-  .embeddedServiceHelpButton .helpButton .uiButton {
-    background-color: #005290;
-    font-family: "Arial", sans-serif;
-  }
-  .embeddedServiceHelpButton .helpButton .uiButton:focus {
-    outline: 1px solid #005290;
-  }
-</style>
-
+    <p>This is a simple HTML page</p>
 <script type='text/javascript'>
 	function initEmbeddedMessaging() {
 		try {
