--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Salesforce Messaging</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple HTML page</p>
+    <h1>Welcome to a Sample External Website</h1>
+    <p>This is a simple HTML page with an embedded javascript chat window.</p>
 <script type='text/javascript'>
 	function initEmbeddedMessaging() {
 		try {
