--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 			embeddedservice_bootstrap.settings.language = 'en_US'; // For example, enter 'en' or 'en-US'
 
 			embeddedservice_bootstrap.init(
-				'00DH40000002Ezp',
-				'Asahi_Service_Portal_Messaging',
-				'https://beans-orion-7292.scratch.my.site.com/ESWAsahiServicePortalM1711933975688',
+				'00D1m0000002dbd',
+				'CUB_Hybris_Service_Deployment',
+				'https://asahi-oc--dev2.sandbox.my.site.com/ESWCUBHybrisServiceDep1737517752507',
 				{
-					scrt2URL: 'https://beans-orion-7292.scratch.my.salesforce-scrt.com'
+					scrt2URL: 'https://asahi-oc--dev2.sandbox.my.salesforce-scrt.com'
 				}
 			);
 		} catch (err) {
@@ -26,7 +26,7 @@
 		}
 	};
 </script>
-<script type='text/javascript' src='https://beans-orion-7292.scratch.my.site.com/ESWAsahiServicePortalM1711933975688/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
+<script type='text/javascript' src='https://asahi-oc--dev2.sandbox.my.site.com/ESWCUBHybrisServiceDep1737517752507/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
 </body>
 </html>
