--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 			console.error('Error loading Embedded Messaging: ', err);
 		}
 	};
+	
+	//Passing Web Context to Prechat - BEGIN
+	window.addEventListener("onEmbeddedMessagingReady", e => {
+		//Set invisible prechat field
+		embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({
+			"FirstName" : "<TO BE POPULATED>",
+			"LastName" : "<TO BE POPULATED>",
+			"Email" : "<TO BE POPULATED>",
+			"CUBSAPID" : "<TO BE POPULATED>",
+			"BusinessUnit" : "<TO BE POPULATED>"
+		});
+	});
+	//Passing Web Context to Prechat - END
 </script>
 <script type='text/javascript' src='https://asahi-oc--dev2.sandbox.my.site.com/ESWCUBHybrisServiceDep1737517752507/assets/js/bootstrap.min.js' onload='initEmbeddedMessaging()'></script>
 
