--- a/user2.html
+++ b/user2.html
@@ -33,7 +33,7 @@
 			"FirstName" : "<TO BE POPULATED>",
 			"LastName" : "<TO BE POPULATED>",
 			"Email" : "<TO BE POPULATED>",
-			"CUBSAPID" : "<TO BE POPULATED>",
+			"CUBSAPID" : "ID123456",
 			"BusinessUnit" : "<TO BE POPULATED>"
 		});
 	});
