--- a/user2.html
+++ b/user2.html
@@ -30,11 +30,7 @@
 	window.addEventListener("onEmbeddedMessagingReady", e => {
 		//Set invisible prechat field
 		embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({
-			"FirstName" : "<TO BE POPULATED>",
-			"LastName" : "<TO BE POPULATED>",
-			"Email" : "<TO BE POPULATED>",
-			"CUBSAPID" : "ID123456",
-			"BusinessUnit" : "<TO BE POPULATED>"
+			"CUBSAPID" : "ID123456"
 		});
 	});
 	//Passing Web Context to Prechat - END
