--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			"FirstName" : "fname", // to be populated by portal with first name of chat user
 			"LastName" : "lname", // to be populated by portal with last name of chat user
 			"Email" : "test@asahibeverages.com", // to be populated by portal with email of chat user
-			"CUBSAPID" : "CUB012345", // to be populated by portal with ECC id of Account
+			"CUBSAPID" : "TEST SUP SUB ID 123455", // to be populated by portal with ECC id of Account
 			"BusinessUnit" : "bu" // to be populated by portal with business unit of chat user
 			"CUBOnlinePK" : "ID987654" // to be populated by portal with PK (primary key) of chat user to be used to match with a Salesforce Contact record
 			"Venue" : "venue" // 	
