--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			"LastName" : "lname", // to be populated by portal with last name of chat user
 			"Email" : "test@asahibeverages.com", // to be populated by portal with email of chat user
 			"CUBSAPID" : "TEST SUP SUB ID 123455", // to be populated by portal with ECC id of Account
-			"BusinessUnit" : "bu" // to be populated by portal with business unit of chat user
-			"CUBOnlinePK" : "ID987654" // to be populated by portal with PK (primary key) of chat user to be used to match with a Salesforce Contact record
+			"BusinessUnit" : "bu", // to be populated by portal with business unit of chat user
+			"CUBOnlinePK" : "ID987654", // to be populated by portal with PK (primary key) of chat user to be used to match with a Salesforce Contact record
 			"Venue" : "venue" // 	
 		});
 	});
